# repoproviders

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-question.yml  03-feature-request.yml  config.yml
.github/workflows/: release.yml  test.yml
docs/: conf.py  design.md  index.md  myst.yml  usage.md
src/repoproviders/: __init__.py  __main__.py  base.py  dataverse.json  doi.py  git.py  resolvers.py  utils.py
src/repoproviders/fetchers/: __init__.py  base.py  ckan.py  dataverse.py  fetcher.py  figshare.py  git.py  hydroshare.py  rclone.py  zenodo.py
src/repoproviders/resolvers/: __init__.py  base.py  dataverse.json  doi.py  feature_detect.py  git.py  guess.py  rclone.py  repos.py  resolver.py  serialize.py  urls.py  wellknown.py
tests/: conftest.py  test_resolvers.py  test_utils.py
tests/fetchers/: test_ckan.py  test_dataverse.py  test_figshare.py  test_github_actions_artifacts.py  test_google_drive.py  test_hydroshare.py  test_zenodo.py
tests/resolvers/: test_dataverse.py  test_doi.py  test_feature_detect.py  test_figshare.py  test_gist.py  test_github.py  test_gitlab.py  test_giturl.py  test_google_drive.py  test_guess.py  test_immutablegit.py  test_resolve.py  test_serialize.py  test_wellknown.py  test_zenodo.py
tests/system/: test_import.py
tests/unit/: test_resolve.py  test_resolvers.py  test_utils.py
